fixed buttons to wrap

--- a/src/assets/styles/DetailsView.module.css
+++ b/src/assets/styles/DetailsView.module.css
@@ -20,11 +20,5 @@
   width: 100%;
   margin: 2vh;
   gap: 2vw;
-}
-
-@media only screen and (max-width: 768px) {
-  .button {
-    width: 100px;
-    font-size: 2vw !important;
-  }
+  flex-wrap: wrap;
 }
